--- a/proyecto-01/style.css
+++ b/proyecto-01/style.css
@@ -1,13 +1,31 @@
-body {
+* {
+    padding: 2;
+    margin: 2;
+    font-family: 'Inconsolata', monospace;
+    font-size: 14pt;
+}
+
+.navbar {
+    background: #000;
+    border: 0.5px solid red;
+}
+
+.navbar a {
     color: beige;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 20pt;
+}
+
+body {
     background: #111;
-    margin-bottom: 200px;
+    color: beige;
 }
 
 
 h1 {
     text-align: center;
-    font-size: 50px;
+    font-size: 32pt;
     color: gold;
 }
 
