--- a/proyecto-01/style.css
+++ b/proyecto-01/style.css
@@ -100,6 +100,14 @@ p {
 }
 
 /* ****************************************************************************
+ * Seccíon Contacto
+ * ************************************************************************* */
+
+.form-contacto > div {
+    margin: 1rem 0;
+}
+
+/* ****************************************************************************
  * Misceláneo / Otros
  * ************************************************************************* */
 
