--- a/proyecto-01/style.css
+++ b/proyecto-01/style.css
@@ -131,3 +131,15 @@ figcaption {
 .fa:hover {
     font-size: 4rem;
 }
+
+/* mapa embebido */
+.mapouter {
+    position: relative;
+}
+
+.gmap_canvas iframe {
+    overflow: hidden;
+    background: none !important;
+    width: 100%;
+    height: 100%;
+}
