--- a/proyecto-01/style.css
+++ b/proyecto-01/style.css
@@ -94,6 +94,15 @@ figcaption {
 }
 
 /* ****************************************************************************
+ * Seccíon Experiencias
+ * ************************************************************************* */
+
+.div-tabla-exp {
+    display: flex;
+    justify-content: center;
+}
+
+/* ****************************************************************************
  * Seccíon Aportes
  * ************************************************************************* */
 
@@ -142,4 +151,9 @@ figcaption {
     background: none !important;
     width: 100%;
     height: 100%;
+}
+
+/* tabla */
+table td{
+    border:0.1rem solid ghostwhite;
 }
