--- a/proyecto-01/style.css
+++ b/proyecto-01/style.css
@@ -13,7 +13,7 @@
 body {
     background: var(--behind);
     color: var(--fg-color);
-    font-family: 'Josefin Slab', serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 1.25rem;
 }
 
