--- a/proyecto-01/responsive.css
+++ b/proyecto-01/responsive.css
@@ -1,12 +1,20 @@
 @media (max-width: 320px) {
+    /* ************************************************************************
+     * Global
+     * ********************************************************************* */
+
     .main-div {
-        width: 100%;
-        margin: 0;
+        width: 100vw;
     }
 
     body {
+        width: 100vw;
         margin: 0;
     }
+
+    /* ************************************************************************
+     * Sección Intro
+     * ********************************************************************* */
 
     .sec-intro {
         display: flex;
@@ -15,5 +23,17 @@
 
     .sec-intro img {
         max-width: 100%;
+    }
+
+    .perfil > img {
+        max-width: 100%;
+    }
+
+    /* ************************************************************************
+     * Sección Contacto
+     * ********************************************************************* */
+
+    .div-textarea > textarea {
+        width: 95%;
     }
 }
