--- a/proyecto-01/style.css
+++ b/proyecto-01/style.css
@@ -52,7 +52,7 @@ h1 {
     border-style: solid;
     border-width: 0 0 0.1rem 0;
     border-color: var(--color-red);
-    margin: 0 14rem;
+    margin: auto;
     color: darkgoldenrod;
     text-align: center;
     font-size: 4rem;
@@ -129,6 +129,10 @@ figcaption {
 
 .form-contacto > div {
     margin: 1rem 0;
+}
+
+.div-textarea > textarea {
+    width: 80%;
 }
 
 /* ****************************************************************************
