--- a/proyecto-01/responsive.css
+++ b/proyecto-01/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 320px) {
+@media (min-device-width: 320px) and (max-device-width: 760px) {
     /* ************************************************************************
      * Global
      * ********************************************************************* */
@@ -12,6 +12,10 @@
         margin: 0;
     }
 
+    h1 {
+        font-size: 3rem;
+    }
+
     /* ************************************************************************
      * Sección Intro
      * ********************************************************************* */
@@ -21,12 +25,11 @@
         flex-direction: column-reverse;
     }
 
-    .sec-intro img {
-        max-width: 100%;
-    }
-
     .perfil > img {
-        max-width: 100%;
+        width: 100%;
+        height: 100%;
+        fit-content: cover;
+        margin: auto;
     }
 
     /* ************************************************************************
