--- a/proyecto-03/nnn-movies/src/app/component/home/home.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/home/home.component.html
@@ -1,1 +1,51 @@
-<p>home works!</p>
+<app-header></app-header>
+<div class="navIcons">
+    <mat-icon aria-hidden="false" aria-label="home" fontIcon="home"></mat-icon>
+    <mat-icon aria-hidden="false" aria-label="login" fontIcon="person"></mat-icon>
+</div>
+
+<div class="moviesTop">
+    <h2>Top Movies</h2>
+    <div class="moviePic">
+        <img src="https://m.media-amazon.com/images/I/81Om+gBguqL._AC_UY218_.jpg">
+    </div>
+    <div class="moviePic">
+        <img src="https://m.media-amazon.com/images/I/91GRmssDiXL._AC_UY218_.jpg">
+    </div>
+    <div class="moviePic">
+        <img src="https://m.media-amazon.com/images/I/71NbodPKj0L._AC_UY218_.jpg">
+    </div>
+</div>
+
+<div class="movieList">
+    <div class="mov">
+        <div class="moviePic">
+            <img src="https://m.media-amazon.com/images/I/91e9898R7QL._AC_UY218_.jpg">
+        </div>
+        <div class="movieInfo">
+            <b>Title: </b>Avengers: End Game<br>
+            <b>Release Year: </b>2019<br>
+            <b>Genre: </b> Drama<br>
+        </div>
+    </div>
+    <div class="mov">
+        <div class="moviePic">
+            <img src="https://m.media-amazon.com/images/I/91W0GRqr82L._AC_UY218_.jpg">
+        </div>
+        <div class="movieInfo">
+            <b>Title: </b>Inception<br>
+            <b>Release Year: </b>2010<br>
+            <b>Genre: </b>Thriller<br>
+        </div>
+    </div>
+    <div class="mov">
+        <div class="moviePic">
+            <img src="https://m.media-amazon.com/images/I/81vlaUH4qqL._AC_UY218_.jpg">
+        </div>
+        <div class="movieInfo">
+            <b>Title: </b>Memento<br>
+            <b>Release Year: </b>2000<br>
+            <b>Genre: </b>Mistery<br>
+        </div>
+    </div>
+</div>
