--- a/proyecto-03/nnn-movies/src/app/component/home/home.component.css
+++ b/proyecto-03/nnn-movies/src/app/component/home/home.component.css
@@ -1,6 +1,10 @@
 .moviesTop {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.h2Movies {
+    text-align: center;
 }
 
 .navIcons {
@@ -9,11 +13,16 @@
 }
 
 .mov {
+    padding: 1rem;
     display: flex;
     justify-content: center;
 }
 
 .moviePic img {
-    alt: "img";
     width: 200px;
+}
+
+#searchbar {
+    display: flex;
+    justify-content: space-evenly;
 }
