--- a/proyecto-03/nnn-movies/src/app/component/home/home.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/home/home.component.html
@@ -1,29 +1,47 @@
 <app-header></app-header>
+
 <div class="navIcons">
     <mat-icon aria-hidden="false" aria-label="home" fontIcon="home"></mat-icon>
     <mat-icon aria-hidden="false" aria-label="login" fontIcon="person"></mat-icon>
 </div>
 
-<div class="moviesTop">
-    <h2>Top Movies</h2>
-    <div class="moviePic">
-        <img src="https://m.media-amazon.com/images/I/81Om+gBguqL._AC_UY218_.jpg">
-    </div>
-    <div class="moviePic">
-        <img src="https://m.media-amazon.com/images/I/91GRmssDiXL._AC_UY218_.jpg">
-    </div>
-    <div class="moviePic">
-        <img src="https://m.media-amazon.com/images/I/71NbodPKj0L._AC_UY218_.jpg">
+<div class="input-group rounded" id="searchbar">
+    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+        aria-describedby="search-addon" />
+    <span class="input-group-text border-0" id="search-addon">
+        <mat-icon aria-hidden="false" aria-label="home" fontIcon="search"></mat-icon>
+    </span>
+</div>
+
+<br>
+
+<div>
+    <h2 class="h2Movies">Top Movies</h2>
+
+    <div class="moviesTop">
+        <div class="moviePic">
+            <img src="https://m.media-amazon.com/images/I/81Om+gBguqL._AC_UY218_.jpg">
+        </div>
+        <div class="moviePic">
+            <img src="https://m.media-amazon.com/images/I/91GRmssDiXL._AC_UY218_.jpg">
+        </div>
+        <div class="moviePic">
+            <img src="https://m.media-amazon.com/images/I/71NbodPKj0L._AC_UY218_.jpg">
+        </div>
     </div>
 </div>
 
+<br>
+
 <div class="movieList">
+    <h2 class="h2Movies">Movie List</h2>
+
     <div class="mov">
         <div class="moviePic">
             <img src="https://m.media-amazon.com/images/I/91e9898R7QL._AC_UY218_.jpg">
         </div>
         <div class="movieInfo">
-            <b>Title: </b>Avengers: End Game<br>
+            <b>Title: </b>End Game<br>
             <b>Release Year: </b>2019<br>
             <b>Genre: </b> Drama<br>
         </div>
