--- a/proyecto-03/nnn-movies/src/app/component/login/login.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/login/login.component.html
@@ -2,7 +2,7 @@
 
 <main class="form-signin w-100 m-auto">
     <form>
-        <h1 class="h3 mb-3 fw-normal">Please Sign In</h1>
+        <h1 class="h3 mb-3 fw-normal">Sign In</h1>
 
         <div class="form-floating">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -18,7 +18,11 @@
                 <input type="checkbox" value="remember-me"> Remember me
             </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign In</button>
+
+        <br><br>
+        <p class="mb-3 fw-normal">No account? Register <a href="https://www.google.com">here</a></p>
+
         <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
     </form>
 </main>
