--- a/proyecto-03/nnn-movies/src/app/component/profiles/profiles.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/profiles/profiles.component.html
@@ -1,2 +1,29 @@
 <app-header></app-header>
-<p>Estos son los perfiles</p>
+
+<br>
+
+<h1>Who's watching?</h1>
+
+<div class="profilePicker">
+    <div class="card">
+        <img src="https://icotar.com/avatar/foo" class="card-img-top" alt="img" id="avatar" />
+        <div class="card-body">
+            <h5 class="card-title">Zel</h5>
+            <a href="#!" class="btn btn-primary btn-floating">
+                <mat-icon aria-hidden="false" aria-label="login" fontIcon="arrow_forward"></mat-icon>
+            </a>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://icotar.com/avatar/baz" class="card-img-top" alt="img" id="avatar" />
+        <div class="card-body">
+            <h5 class="card-title">Zoe</h5>
+            <a href="#!" class="btn btn-primary btn-floating">
+                <mat-icon aria-hidden="false" aria-label="login" fontIcon="arrow_forward"></mat-icon>
+            </a>
+        </div>
+    </div>
+</div>
+
+<br><br>
+<a href="https://google.com" id="newProfile"><h3>Create a new profile</h3></a>
