p03/front: avance general

--- a/proyecto-03/nnn-movies/src/app/component/account/account.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/account/account.component.html
@@ -5,7 +5,7 @@
         <img src="https://icotar.com/avatar/foo" class="card-img-top" alt="img" id="avatar" />
         <div class="card-body">
             <h5 class="card-title">Zel</h5>
-            <a href="">Change profile</a>
+            <a href="/profiles">Change profile</a>
         </div>
     </div>
     <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
