--- a/proyecto-03/nnn-movies/src/app/component/home/home.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/home/home.component.html
@@ -1,8 +1,10 @@
 <app-header></app-header>
 
 <div class="navIcons">
-    <mat-icon aria-hidden="false" aria-label="home" fontIcon="home"></mat-icon>
-    <mat-icon aria-hidden="false" aria-label="login" fontIcon="person"></mat-icon>
+    <a href="/"><mat-icon aria-hidden="false" aria-label="home" fontIcon="home"></mat-icon></a>
+    <a href="/login"><mat-icon aria-hidden="false" aria-label="login" fontIcon="person"></mat-icon></a>
+    <a href="/account"><mat-icon aria-hidden="false" aria-label="login" fontIcon="manage_accounts"></mat-icon></a>
+    <a href="/profiles"><mat-icon aria-hidden="false" aria-label="login" fontIcon="faces"></mat-icon></a>
 </div>
 
 <div class="input-group rounded" id="searchbar">
