--- a/proyecto-03/nnn-movies/src/app/component/login/login.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/login/login.component.html
@@ -23,6 +23,9 @@
         <br><br>
         <p class="mb-3 fw-normal">No account? Register <a href="https://www.google.com">here</a></p>
 
+        <br><br>
+        <p class="mb-3 fw-bold">For dev login click <a href="/">here</a></p>
+
         <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
     </form>
 </main>
