--- a/proyecto-03/nnn-movies/src/app/component/profiles/profiles.component.html
+++ b/proyecto-03/nnn-movies/src/app/component/profiles/profiles.component.html
@@ -26,4 +26,6 @@
 </div>
 
 <br><br>
-<a href="https://google.com" id="newProfile"><h3>Create a new profile</h3></a>
+<a href="https://google.com" id="newProfile">
+    <h3>Create a new profile</h3>
+</a>
