--- a/proyecto-03/proy03-front/src/app/comp/home/home.component.css
+++ b/proyecto-03/proy03-front/src/app/comp/home/home.component.css
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Ubuntu Mono', monospace;
 }
 
-.grid {
+.movie-container {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
     text-align: center;
     column-gap: 20px;
+}
+
+.card-body {
+    padding: 1.5rem;
 }
