--- a/proyecto-03/proy03-front/src/app/comp/home/home.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/home/home.component.html
@@ -1,10 +1,9 @@
 <app-header></app-header>
 
-<div class="grid">
-    <div class="placeholder" *ngFor="let m of movies">
+<div class="movie-container">
+    <div class="card-body" *ngFor="let m of movies">
         <img src="{{m.artwork_url}}" alt="">
-        <h1>{{m.title}}</h1>
-        <h1>Year: {{m.year}}</h1>
-        <button (click)="goToMovie(m.movie_id)">MORE</button>
+        <h2>{{m.title}} ({{m.year}})</h2>
+        <button (click)="goToMovie(m.movie_id)">View More...</button>
     </div>
 </div>
