--- a/proyecto-03/proy03-front/src/app/comp/common/header/header.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/common/header/header.component.html
@@ -1,1 +1,12 @@
-<a routerLink="/"><span class="h1"><h1>nnn-movies</h1></span></a>
+<a routerLink="/"><span class="h1">
+        <h1>nnn-movies</h1>
+    </span></a>
+
+<mat-toolbar>
+    <a routerLink="/home">
+        <mat-icon aria-hidden="false" fontIcon="movie"></mat-icon>
+    </a>
+    <a routerLink="/actors">
+        <mat-icon aria-hidden="false" fontIcon="groups"></mat-icon>
+    </a>
+</mat-toolbar>
