--- a/proyecto-03/proy03-front/src/app/comp/common/header/header.component.css
+++ b/proyecto-03/proy03-front/src/app/comp/common/header/header.component.css
@@ -10,6 +10,11 @@
     letter-spacing: 0;
 }
 
+.mat-toolbar {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 a {
     text-decoration: none;
 }
