--- a/proyecto-03/proy03-front/src/app/comp/actors/actors.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/actors/actors.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-navbar></app-navbar>
 
 <div class="grid">
     <div class="card border-success mb-3 text-bg-warning" style="max-width: 18rem;" *ngFor="let a of actors">
