--- a/proyecto-03/proy03-front/src/app/comp/home/home.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-navbar></app-navbar>
 
 <div class="movie-container">
     <div class="card-body" *ngFor="let m of movies">
