--- a/proyecto-03/proy03-front/src/app/comp/movie/movie.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/movie/movie.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-navbar></app-navbar>
 
 <div id="movie-card" class="card text-bg-secondary" style="width: 18rem;">
     <img src="{{movie.artwork_url}}" alt="">
