--- a/proyecto-03/proy03-front/src/app/comp/common/navbar/navbar.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/common/navbar/navbar.component.html
@@ -2,6 +2,9 @@
     <a routerLink="/">
         <mat-icon aria-hidden="false" fontIcon="account_circle"></mat-icon>
     </a>
+    <a routerLink="/filter">
+        <mat-icon aria-hidden="false" fontIcon="tune"></mat-icon>
+    </a>
     <a routerLink="/home">
         <mat-icon aria-hidden="false" fontIcon="movie"></mat-icon>
     </a>
