--- a/proyecto-03/proy03-front/src/app/comp/filter/filter.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/filter/filter.component.html
@@ -1,22 +1,32 @@
 <app-header></app-header>
 <app-navbar></app-navbar>
 
-<div class="grid">
-    <div class="card border-success mb-3 text-bg-warning" style="max-width: 18rem;" *ngFor="let a of actors">
-        <div class="card-header bg-transparent border-success">
-            <h5>{{a.first_name}} {{a.last_name}} ({{a.year}})</h5>
+<br>
+<h2>Filter by <b>Actor</b> & <b>Year:</b></h2>
+<br>
+
+<div class="filter-div">
+    <div class="actor-filter">
+        <div (click)="getMoviesByActor(a.first_name + ' ' + a.last_name)" id="actor-card"
+            class="card border-success mb-3 text-bg-warning" style="max-width: 18rem;" *ngFor="let a of actors">
+            <div class="card-header bg-transparent border-success">
+                <h5>{{a.first_name}} {{a.last_name}} (<i>{{a.year}}</i>)</h5>
+            </div>
+            <div class="card-footer bg-transparent border-success"><i>Country</i>: {{a.country}}</div>
         </div>
-        <div class="card-footer bg-transparent border-success"><i>Country</i>: {{a.country}}</div>
-        <div class="card-footer bg-transparent border-success">
-            <mat-icon (click)="getMoviesByActor('Tom Hardy')" aria-hidden="false" fontIcon="movie"></mat-icon>
+    </div>
+
+    <div class="years-filter">
+        <div class="btn-group" role="group" *ngFor="let y of years">
+            <button id="btn-year" (click)="getMoviesByYear(y)" type="button" class="btn btn-secondary">{{y}}</button>
         </div>
     </div>
 </div>
 
-<button (click)="getMoviesByActor('Tom Hardy')">String???</button>
+<br><br>
 
 <div class="movie-container">
-    <div class="card-body" *ngFor="let m of movies">
+    <div class="card-body" *ngFor="let m of movies_filtered">
         <img src="{{m.artwork_url}}" alt="">
         <h2>{{m.title}} ({{m.year}})</h2>
         <button (click)="goToMovie(m.movie_id)">View</button>
