--- a/proyecto-03/proy03-front/src/app/comp/home/home.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/home/home.component.html
@@ -3,8 +3,7 @@
 
 <div class="movie-container">
     <div class="card-body" *ngFor="let m of movies">
-        <img src="{{m.artwork_url}}" alt="">
+        <img (click)="goToMovie(m.movie_id)" src="{{m.artwork_url}}" alt="">
         <h2>{{m.title}} ({{m.year}})</h2>
-        <button (click)="goToMovie(m.movie_id)">View</button>
     </div>
 </div>
