--- a/proyecto-03/proy03-front/src/styles.css
+++ b/proyecto-03/proy03-front/src/styles.css
@@ -1,7 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+
 body {
-    background-color: #242A32;
-    color: aliceblue;
-  }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  background-color: #242A32;
+  color: aliceblue;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Ubuntu Mono', monospace;
+}
