--- a/proyecto-03/proy03-front/src/app/comp/movie/movie.component.css
+++ b/proyecto-03/proy03-front/src/app/comp/movie/movie.component.css
@@ -6,3 +6,12 @@
     margin: 0 auto;
     color: coral;
 }
+
+.movies-related {
+    margin: 0 auto;
+    padding: 1.5rem;
+}
+
+.movies-related>h2 {
+    text-align: center;
+}
