--- a/proyecto-03/proy03-front/src/app/comp/common/navbar/navbar.component.html
+++ b/proyecto-03/proy03-front/src/app/comp/common/navbar/navbar.component.html
@@ -11,4 +11,7 @@
     <a routerLink="/actors">
         <mat-icon aria-hidden="false" fontIcon="groups"></mat-icon>
     </a>
+    <a routerLink="/docs">
+        <mat-icon aria-hidden="false" fontIcon="description"></mat-icon>
+    </a>
 </mat-toolbar>
